--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -47,25 +47,11 @@
                     <h1 class="masthead-heading mb-0">Formulario Factura</h1>
                     <h2 class="masthead-subheading mb-0">Ingrese los siguientes datos:</h2>
                     <form>
-                        <div class="form-row">
-                            <div class="form-group col-md-6">
-                                <label for="inputEmail4">Email</label>
-                                <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
-                            </div>
-                            <div class="form-group col-md-6">
-                                <label for="inputPassword4">Password</label>
-                                <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
-                            </div>
-                        </div>
                         <div class="form-group">
-                            <label for="inputAddress">Address</label>
-                            <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                            <label for="idFactura">Numero de factura</label>
+                            <input type="number" class="form-control" id="idFactura" placeholder="digite el numero de la factura">
                         </div>
-                        <div class="form-group">
-                            <label for="inputAddress2">Address 2</label>
-                            <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
-                        </div>
-                        <div class="form-row">
+                        <!--<div class="form-row">
                             <div class="form-group col-md-6">
                                 <label for="inputCity">City</label>
                                 <input type="text" class="form-control" id="inputCity">
@@ -89,8 +75,8 @@
                                     Check me out
                                 </label>
                             </div>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Enviar</button>
+                        </div>-->
+                        <button type="submit" class="btn btn-primary" onclick="BillControllerModule.sendInfo();">Enviar</button>
                     </form>
                     
                 </div>
@@ -163,9 +149,14 @@
             </div>
         </footer>
 
+		<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+		
+	
         <!-- Bootstrap core JavaScript -->
         <script src="vendor/jquery/jquery.min.js"></script>
         <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+		
+		<script src="js/app.js"></script>
 
     </body>
 
