--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -43,41 +43,18 @@
 
         <header class="masthead text-center text-white">
             <div class="masthead-content">
-                <div class="container">
-                    <h1 class="masthead-heading mb-0">Formulario Factura</h1>
-                    <h2 class="masthead-subheading mb-0">Ingrese los siguientes datos:</h2>
-                    <form>
+                <div class="container" id="mainContainer">
+                    <h1 id="tituloPrincipal"class="masthead-heading mb-0">Formulario Factura</h1>
+                    <h2 id="instruccionesPagina"class="masthead-subheading mb-0">Ingrese los siguientes datos:</h2>
+                    <form id="billForm">
                         <div class="form-group">
                             <label for="idFactura">Numero de factura</label>
                             <input type="number" class="form-control" id="idFactura" placeholder="digite el numero de la factura">
                         </div>
-                        <!--<div class="form-row">
-                            <div class="form-group col-md-6">
-                                <label for="inputCity">City</label>
-                                <input type="text" class="form-control" id="inputCity">
-                            </div>
-                            <div class="form-group col-md-4">
-                                <label for="inputState">State</label>
-                                <select id="inputState" class="form-control">
-                                    <option selected>Choose...</option>
-                                    <option>...</option>
-                                </select>
-                            </div>
-                            <div class="form-group col-md-2">
-                                <label for="inputZip">Zip</label>
-                                <input type="text" class="form-control" id="inputZip">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="gridCheck">
-                                <label class="form-check-label" for="gridCheck">
-                                    Check me out
-                                </label>
-                            </div>
-                        </div>-->
+                        
                         <button type="submit" class="btn btn-primary" onclick="BillControllerModule.sendInfo();">Enviar</button>
                     </form>
+					<a class="navbar-brand" href="/bill.json" download="bill.json" id="botonDescarga" style="visibility:hidden">Download</a>
                     
                 </div>
             </div>
